# todont

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  blog.md  docker-compose.yml  llms.txt  opencode.json  pyproject.toml
.claude/agents/: backend-architect.md  backend-test-lint.md
.claude/skills/github-commit/: SKILL.md
.opencode/agents/: backend.md
app/: AGENTS.md  auth.py  database.py  dynamo.py  main.py
app/events/: __init__.py  bus.py  models.py  store.py
app/models/: todo.py
app/routers/: events.py  todos.py
backend/: AGENTS.md
backend/app/: main.py
backend/app/models/: todo.py
backend/app/routers/: todos.py
docs/: plan.md
infra/: main.tf
tests/: conftest.py  test_events.py  test_todos.py
tests/integration/: conftest.py  test_auth.py  test_events.py  test_todos.py
