[project]
name = "complicated-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "fastapi-mcp>=0.4.0",
    "sqlmodel>=0.0.37",
    "aiosqlite>=0.22.1",
    "boto3>=1.42.74",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "moto[dynamodb]>=5.1.22",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
